Fix zoom-level offsetting chevron spacing
Zooming at %110 used to add a weird gap between the chevron and the actual menu item.

--- a/css/robosane.css
+++ b/css/robosane.css
@@ -401,7 +401,8 @@ a:hover, a:focus {
 }
 .nav > li > a {
   transition: all .2s ease;
-  border-bottom: 4px solid transparent;
+  border-bottom: 6px solid transparent;
+  border-top: 4px solid transparent;
 }
 .nav > li > a:hover,
 .nav > li > a:focus {
@@ -412,7 +413,7 @@ a:hover, a:focus {
 }
 .nav-stacked > li > a:hover,
 .nav-stacked > li > a:focus {
-  border-bottom: 4px solid transparent;
+  border-bottom: 6px solid transparent;
   border-left: 4px solid #ed2024;
 }
 .nav-pills > li {
